[gd_scene load_steps=5 format=3 uid="uid://b4r8dksu3kfe8"]

[ext_resource type="Shader" path="res://BlurShader.gdshader" id="1_7qd24"]
[ext_resource type="Script" path="res://Menu.gd" id="1_d68gx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qik26"]
shader = ExtResource("1_7qd24")
shader_parameter/lod = 2.5

[sub_resource type="LabelSettings" id="LabelSettings_j642m"]
font_size = 128
font_color = Color(0.184314, 0.419608, 0.968627, 1)
outline_size = 12
outline_color = Color(1, 0.662745, 0.223529, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d68gx")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_qik26")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = 183.0
offset_right = 197.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "< Start new Game >"
flat = true

[node name="LabelScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.329
anchor_right = 0.5
anchor_bottom = 0.329
offset_left = -286.0
offset_top = 86.808
offset_right = 285.0
offset_bottom = 263.808
grow_horizontal = 2
grow_vertical = 2
text = "YAAY! You succesfully
completed the testing run

score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelDefeat" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.329
anchor_right = 0.5
anchor_bottom = 0.329
offset_left = -254.5
offset_top = 61.808
offset_right = 253.5
offset_bottom = 283.808
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.88, 0.1936, 0.1936, 1)
text = "Congratulations!
You successfully broke
the chair

score: 9999999"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 110.0
offset_right = 1140.0
offset_bottom = 270.0
text = "Wimpy wheels"
label_settings = SubResource("LabelSettings_j642m")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
